--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           launchable record session --build ${{ github.run_id }} --observation --test-suite unit-test > session.txt
           launchable subset --session $(cat session.txt) --target 25% maven src/test/java > launchable-subset.txt
-          cat launchable-subet.txt
+          cat launchable-subset.txt
       - name: Test
         run: mvn test
         run: mvn test -Dsurefire.includesFile=launchable-subset.txt
